"node-id-<node_nid> node-slug-<node_slug>" + (if the user is authenticated) "is_authenticated".

[NEW] Template can now be changed and updated within the editor dynamically.

[NEW] A record page cannot be deleted it has children or is a location target.

[CHG] Renamed the `contentsid` and `contents` property of the "contents" active record as
`contentid` and `content`. Renamed the `page:contents` markup as `page:content`. 




2010-09-28 # 0.11

[NEW] Using the new features of the FObject class, the 'site.pages' module add the `url` and
`absolute_url` getters as well as the `url()` and `absolute_url()` methods to nodes.

[NEW] The `page:languages` offers an alternative to the `page:translation` markup.

[NEW] Added the `from-level` attribute to the `navigation` markup.

[NEW] Added SEO features such as 'document title' and 'document description'.

[NEW] The `navigation` markup now fires the 'alter.markup.navigation' allowing listeners to modify
the output of the markup. 

[NEW] A page content can now be override as a string, we no longer have to create a false content
object.

[NEW] When the content is converted into a string, external anchors are modified to include the
"target" attribute with the "_blank" value.

[CHG] The 'view' editor is now much nicer.

[DEL] Removed the 'page:tracker' markup which has been replaced with an automated solution from
the 'site.firstposition' module.

[FIX] site_pages_WdModel::loadByPath() is confused by '/' used in regex.




2010-07-09 # 0.10

[NEW] The new WdAdjustTemplateElement class can be used to create element to adgust the
template of an object. It's currently only practical with pages, but who knows...

[NEW] The new collectTemplateContents() module method can now be used to collect editable contents
(page:contents) of a template, including editable contents of all its partials.

[NEW] Template is now inherited, except when the parent is a home page in which case the template